# Document-MCP

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  GEMINI.md  GITSUMMARY.md  LICENSE  README.md  debug_endpoints.py  generate_jwt_token.py  inspect_mcp_tools.py  inspect_tool_manager.py  mcp_init_request.json  pytest.ini  spaces_README.md  start-dev.sh  start-project-windows.bat  status-dev.sh  stop-dev.sh
backend/: .env.example  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  MODEL_SELECTION_API.md  README_MODEL_SELECTION.md  example_models_client.py  main.py  pyproject.toml  requirements.txt  test_database_schema.py  test_models_api.py  vlt.toml
backend/prompts/: tools.json
backend/prompts/librarian/: organize.md  summarize.md  system.md  web_search.md
backend/prompts/oracle/: compression.md  no_context.md  synthesis.md  system.md
backend/prompts/shared/: environment.md  tools-reference.md
backend/src/api/: main.py
backend/src/mcp/: __init__.py  server.py
backend/src/models/: __init__.py  auth.py  graph.py  index.py  librarian.py  note.py  oracle.py  oracle_context.py  search.py  settings.py  thread.py  user.py
backend/src/services/: __init__.py  auth.py  config.py  context_tree_service.py  database.py  indexer.py  librarian_agent.py  librarian_service.py  model_provider.py  oracle_agent.py  oracle_bridge.py  oracle_context_service.py  prompt_loader.py  rag_index.py  seed.py  thread_retriever.py  thread_service.py  tool_executor.py  user_settings.py  vault.py
backend/tests/: conftest.py
(+165 files in other folders)
