[project]
name = "Documentation-MCP"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.2",
    "fastmcp>=2.13.1",
    "huggingface-hub>=1.1.4",
    "mcp>=1.21.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.0",
    "python-frontmatter>=1.1.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
